<resources>
    <string name="app_name">Four Digits</string>
    <string name="invites">Invites</string>
    <string name="your_turn">Your Turn</string>
    <string name="their_turn">Their Turn</string>
    <string name="game_over">Game Over</string>
    <string name="favorites">Favorites</string>
    <string name="select_friends">Select Friends</string>
    <string name="friends">Friends</string>
    <string name="round">Round</string>
    <string name="guess">Guess</string>
    <string name="correct">Numbers</string>
    <string name="correct_spot">Spots</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="ten">10</string>
    <string name="check">Check</string>
    <string name="game_type">Select Game Type</string>
    <string name="refresh">Refresh</string>
    <string name="collaborative">Collaborative</string>
    <string name="vs">vs</string>
    <string name="computer">Computer</string>
    <string name="separate">Separate</string>
    <string name="alternate">Alternate</string>
    <string name="first_name_hint">First Name</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an Account?</string>
    <string name="dont_have_account">Dont Have an Account?</string>
    <string name="cancel">cancel</string>
    <string name="vs_computer">Vs. Computer</string>
    <string name="invited">invited</string>
    <string name="new_game">New Game +</string>
    <string name="add_friend">Add Friend</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="sign_in">Sign In</string>
    <string name="complete">Finish</string>
    <string name="game_info">Game Info</string>
    <string name="create_account">Crreate Account</string>
    <string name="results">Results</string>
    <string name="profile">Profile</string>
    <string name="view_profile">View Profile</string>
</resources>
